# GitRust

./: .gitignore  Cargo.toml  LICENSE
cli_parser/: Cargo.toml
cli_parser/src/: args.rs  commands.rs  lib.rs
core/: Cargo.toml
core/src/: errors.rs  lib.rs
core/src/application/: cat_file.rs  hash_object.rs  init.rs  mod.rs
core/src/compress/: mod.rs  zlib.rs
core/src/hash/: mod.rs  sha1.rs
core/src/object/: id.rs  kind.rs  mod.rs  object.rs
core/src/repository/: mod.rs  repository.rs  repository_fs.rs
core/src/store/: mod.rs  object_db.rs  object_db_writer.rs  paths.rs
crates/cli_parser/: Cargo.toml
crates/cli_parser/src/: args.rs  commands.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: cli.rs  errors.rs  lib.rs  types.rs
crates/common/src/cli/: args.rs  commands.rs
crates/common/src/cli/args/: hash_object.rs
crates/common/src/types/: git_object.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs
crates/core/src/adapters/: mod.rs
crates/core/src/adapters/std/: mod.rs  std_input.rs
crates/core/src/application/: hash_object.rs  init.rs  mod.rs
crates/core/src/cli/: commands.rs  mod.rs
crates/core/src/objects/: git_object.rs  git_repo.rs  git_repo_fs.rs  mod.rs
crates/core/src/ports/: mod.rs  text_input.rs
crates/core/src/utils/: compression.rs  hashing.rs  mod.rs
crates/io/: Cargo.toml
crates/io/src/: commands.rs  io.rs  lib.rs
src/: main.rs
tests/: hash_object.rs
tests/common/: mod.rs
