[package]
name = "gitrust"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["core", "cli_parser"]

[dependencies]
anyhow = "1.0.100"
assert_cmd = "2.1.1"
gitrust-cli_parser = { version = "0.1.0", path = "cli_parser" }
gitrust-core = { version = "0.1.0", path = "core" }
tempfile = "3.24.0"
